--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,11 @@
+/* eslint-disable */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* eslint-enable */
 
 html {
+  scroll-padding-top: 80px;
   scroll-behavior: smooth;
 }
 
